--- a/Comits.css
+++ b/Comits.css
@@ -228,7 +228,7 @@
   }
 
   .u-section-2 .u-text-1 {
-    font-size: 4.5rem;
+    font-size: 3.75rem;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -291,7 +291,7 @@
   min-height: 16px;
   width: 99px;
   min-width: 72px;
-  margin: 96px auto 0;
+  margin: 250px auto 0;
 }
 
 .u-section-3 .u-icon-2 {
@@ -342,7 +342,7 @@
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 749px;
+    min-height: 788px;
   }
 
   .u-section-3 .u-image-1 {
@@ -356,8 +356,8 @@
   }
 
   .u-section-3 .u-social-icons-1 {
-    margin-top: 89px;
-    margin-left: 85px;
+    margin-top: 20px;
+    margin-left: 104px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -375,7 +375,7 @@
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 794px;
   }
 
   .u-section-3 .u-image-1 {
@@ -385,6 +385,11 @@
 
   .u-section-3 .u-text-2 {
     width: 222px;
+  }
+
+  .u-section-3 .u-social-icons-1 {
+    margin-top: 2px;
+    margin-left: 61px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -406,10 +411,6 @@
     width: 540px;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 644px;
-  }
-
   .u-section-3 .u-container-layout-1 {
     padding-left: 50px;
     padding-right: 50px;
@@ -422,7 +423,8 @@
   }
 
   .u-section-3 .u-social-icons-1 {
-    margin-top: 85px;
+    margin-top: 8px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-container-layout-2 {
@@ -451,7 +453,7 @@
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 664px;
+    min-height: 754px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -468,8 +470,7 @@
   }
 
   .u-section-3 .u-social-icons-1 {
-    margin-top: 59px;
-    margin-left: auto;
+    margin-top: 18px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -669,19 +670,20 @@
   margin: 43px 0 0 30px;
 }
 
-.u-section-5 .u-layout-cell-2 {
-  min-height: 436px;
-}
-
-.u-section-5 .u-container-layout-2 {
-  padding: 30px 30px 30px 189px;
-}
-
 .u-section-5 .u-btn-1 {
   background-image: none;
   font-weight: normal;
   text-transform: none;
   letter-spacing: normal;
+  margin: 37px auto 0 30px;
+}
+
+.u-section-5 .u-layout-cell-2 {
+  min-height: 529px;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 30px 30px 30px 189px;
 }
 
 @media (max-width: 1199px) {
@@ -697,16 +699,20 @@
     margin-left: 0;
   }
 
-  .u-section-5 .u-container-layout-2 {
-    padding: 0;
-  }
-
   .u-section-5 .u-btn-1 {
     border-style: none;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
-    margin: 0 auto 0 -611px;
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 436px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding: 0;
   }
 }
 
@@ -724,12 +730,7 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-5 .u-btn-1 {
-    margin-right: 30px;
-    margin-left: 0;
+    min-height: 334px;
   }
 }
 
@@ -741,6 +742,10 @@
   .u-section-5 .u-layout-wrap-1 {
     margin-top: 22px;
     margin-bottom: -36px;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 716px;
   }
 }
 
@@ -760,21 +765,24 @@
 
   .u-section-5 .u-text-1 {
     font-size: 4.5rem;
-    width: auto;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 451px;
   }
 } .u-section-6 {
   background-image: none;
 }
 
 .u-section-6 .u-sheet-1 {
-  min-height: 1270px;
+  min-height: 1190px;
 }
 
 .u-section-6 .u-shape-1 {
   width: 351px;
   background-image: none;
   height: 1062px;
-  margin: 80px auto 0 169px;
+  margin: 0 auto 0 169px;
 }
 
 .u-section-6 .u-group-1 {
@@ -782,29 +790,35 @@
   min-height: 441px;
   background-image: none;
   height: auto;
-  margin: -956px 205px 0 auto;
+  margin: -995px 205px 0 auto;
 }
 
 .u-section-6 .u-container-layout-1 {
   padding: 30px;
 }
 
+.u-section-6 .u-icon-1 {
+  width: 85px;
+  height: 85px;
+  margin: 33px auto 0 0;
+}
+
 .u-section-6 .u-text-1 {
   font-size: 2.25rem;
-  margin: 67px 0 0;
+  margin: 12px 0 0;
 }
 
 .u-section-6 .u-text-2 {
   font-size: 1.125rem;
   font-weight: 400;
-  margin: 45px 0 0;
+  margin: 25px 0 0;
 }
 
 .u-section-6 .u-gallery-1 {
   width: 985px;
   height: 671px;
   grid-gap: 10px 10px;
-  margin: -99px auto 0 25px;
+  margin: -60px auto 60px 25px;
 }
 
 .u-section-6 .u-gallery-inner-1 {
@@ -844,21 +858,20 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 1238px;
+    min-height: 1351px;
   }
 
   .u-section-6 .u-shape-1 {
     width: 300px;
     height: 962px;
-    margin-top: 77px;
+    margin-top: 190px;
     margin-left: 115px;
   }
 
   .u-section-6 .u-group-1 {
     width: 435px;
-    min-height: 434px;
-    margin-top: -1026px;
-    margin-right: 169px;
+    margin-top: -1113px;
+    margin-right: 148px;
     height: auto;
   }
 
@@ -870,14 +883,12 @@
 
   .u-section-6 .u-text-2 {
     width: auto;
-    margin-top: 25px;
   }
 
   .u-section-6 .u-gallery-1 {
     width: 905px;
     height: 618px;
-    margin-top: -156px;
-    margin-bottom: 60px;
+    margin-top: -69px;
     margin-left: 0;
   }
 }
@@ -894,14 +905,14 @@
   }
 
   .u-section-6 .u-group-1 {
-    margin-top: -1443px;
-    margin-right: 76px;
+    margin-top: -1504px;
+    margin-right: 71px;
   }
 
   .u-section-6 .u-gallery-1 {
     width: 685px;
     height: 1055px;
-    margin-top: -118px;
+    margin-top: -57px;
   }
 
   .u-section-6 .u-gallery-inner-1 {
@@ -915,15 +926,15 @@
   }
 
   .u-section-6 .u-shape-1 {
-    height: 3662px;
-    margin-top: 76px;
-    margin-right: 186px;
+    height: 3826px;
+    margin-top: 0;
     margin-left: 54px;
   }
 
   .u-section-6 .u-group-1 {
-    margin-top: -474px;
-    margin-right: 43px;
+    margin-top: -3739px;
+    margin-right: auto;
+    margin-left: 23px;
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -934,7 +945,7 @@
   .u-section-6 .u-gallery-1 {
     width: 505px;
     height: 3162px;
-    margin-top: -3530px;
+    margin-top: 25px;
   }
 
   .u-section-6 .u-gallery-inner-1 {
@@ -950,14 +961,10 @@
   .u-section-6 .u-shape-1 {
     width: 260px;
     height: 2558px;
-    margin-top: 88px;
     margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-6 .u-group-1 {
-    min-height: 274px;
-    margin-top: -2515px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -973,7 +980,6 @@
 
   .u-section-6 .u-gallery-1 {
     height: 2129px;
-    margin-top: 18px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -983,250 +989,16 @@
 }
 
 .u-section-7 .u-sheet-1 {
-  min-height: 667px;
-}
-
-.u-section-7 .u-slider-1 {
-  margin-top: 63px;
-  margin-bottom: 52px;
-  min-height: 500px;
-}
-
-.u-section-7 .u-carousel-indicators-1 {
-  position: absolute;
-  bottom: 10px;
-}
-
-.u-section-7 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-7 .u-text-1 {
-  width: 747px;
-  line-height: 1.8;
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin: 20px auto 0;
-}
-
-.u-section-7 .u-image-1 {
-  width: 152px;
-  height: 152px;
-  background-image: url("images/3.jpg");
-  background-position: 50% 50%;
-  margin: 20px auto 0;
-}
-
-.u-section-7 .u-text-2 {
-  text-transform: uppercase;
-  font-weight: 700;
-  width: 237px;
-  margin: 30px auto 0;
-}
-
-.u-section-7 .u-text-3 {
-  font-size: 1rem;
-  margin: 20px 0 0;
-}
-
-.u-section-7 .u-btn-1 {
-  border-style: none none solid;
-  padding: 0;
-}
-
-.u-section-7 .u-container-layout-2 {
-  padding: 30px;
-}
-
-.u-section-7 .u-text-4 {
-  margin: 20px 0 0;
-}
-
-.u-section-7 .u-text-5 {
-  line-height: 1.8;
-  font-size: 1.5rem;
-  width: 747px;
-  font-weight: 700;
-  margin: 20px auto 0;
-}
-
-.u-section-7 .u-image-2 {
-  width: 152px;
-  height: 152px;
-  background-image: url("images/1.jpg");
-  background-position: 50% 50%;
-  margin: 20px 478px 0 450px;
-}
-
-.u-section-7 .u-text-6 {
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin: 30px 438px 0;
-}
-
-.u-section-7 .u-text-7 {
-  font-size: 1rem;
-  margin: 20px 0 0;
-}
-
-.u-section-7 .u-btn-2 {
-  border-style: none none solid;
-  padding: 0;
-}
-
-.u-section-7 .u-carousel-control-1 {
-  width: 50px;
-  height: 50px;
-  background-image: none;
-}
-
-.u-section-7 .u-carousel-control-2 {
-  width: 50px;
-  height: 50px;
-  left: auto;
-  top: 224px;
-  position: absolute;
-  right: 0;
-  background-image: none;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-slider-1 {
-    min-height: 600px;
-    height: auto;
-  }
-
-  .u-section-7 .u-image-2 {
-    margin-left: 350px;
-    margin-right: 378px;
-  }
-
-  .u-section-7 .u-text-6 {
-    margin-left: 338px;
-    margin-right: 338px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-7 .u-slider-1 {
-    min-height: 500px;
-  }
-
-  .u-section-7 .u-container-layout-1 {
-    padding-right: 55px;
-    padding-left: 50px;
-  }
-
-  .u-section-7 .u-text-1 {
-    width: auto;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-7 .u-text-2 {
-    width: 273px;
-    margin-top: 31px;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-top: 19px;
-  }
-
-  .u-section-7 .u-container-layout-2 {
-    padding-right: 55px;
-    padding-left: 50px;
-  }
-
-  .u-section-7 .u-text-5 {
-    width: auto;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-7 .u-image-2 {
-    margin-left: 240px;
-    margin-right: 268px;
-  }
-
-  .u-section-7 .u-text-6 {
-    width: 273px;
-    margin-top: 31px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-7 .u-text-7 {
-    margin-top: 19px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-7 .u-container-layout-1 {
-    padding-left: 45px;
-    padding-right: 45px;
-  }
-
-  .u-section-7 .u-text-1 {
-    font-size: 1.25rem;
-  }
-
-  .u-section-7 .u-text-3 {
-    width: auto;
-  }
-
-  .u-section-7 .u-container-layout-2 {
-    padding-left: 45px;
-    padding-right: 45px;
-  }
-
-  .u-section-7 .u-text-5 {
-    font-size: 1.125rem;
-  }
-
-  .u-section-7 .u-image-2 {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-7 .u-text-7 {
-    width: auto;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 738px;
-  }
-
-  .u-section-7 .u-slider-1 {
-    margin-top: 52px;
-  }
-
-  .u-section-7 .u-container-layout-1 {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-
-  .u-section-7 .u-container-layout-2 {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-} .u-section-8 {
-  background-image: none;
-}
-
-.u-section-8 .u-sheet-1 {
   min-height: 403px;
 }
 
-.u-section-8 .u-text-1 {
+.u-section-7 .u-text-1 {
   font-size: 3.75rem;
   width: 514px;
   margin: 75px auto 0;
 }
 
-.u-section-8 .u-btn-1 {
+.u-section-7 .u-btn-1 {
   background-image: none;
   border-style: none;
   font-size: 1.25rem;
@@ -1234,7 +1006,7 @@
   padding: 0;
 }
 
-.u-section-8 .u-text-2 {
+.u-section-7 .u-text-2 {
   width: 514px;
   background-image: none;
   font-weight: normal;
@@ -1242,11 +1014,11 @@
   margin: 30px auto 0;
 }
 
-.u-section-8 .u-icon-2 {
+.u-section-7 .u-icon-2 {
   margin-top: 4px;
 }
 
-.u-section-8 .u-text-3 {
+.u-section-7 .u-text-3 {
   font-weight: 400;
   width: 514px;
   margin-left: auto;
@@ -1254,35 +1026,45 @@
   margin-bottom: 60px;
 }
 
-.u-section-8 .u-btn-2 {
+.u-section-7 .u-btn-2 {
   background-image: none;
   font-size: 1.25rem;
   padding: 0;
 }
 
 @media (max-width: 767px) {
-  .u-section-8 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 2.8125rem;
     margin-top: 70px;
   }
 
-  .u-section-8 .u-btn-1 {
+  .u-section-7 .u-btn-1 {
     margin-top: 432px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-8 .u-text-1 {
+  .u-section-7 .u-sheet-1 {
+    min-height: 467px;
+  }
+
+  .u-section-7 .u-text-1 {
     font-size: 2.25rem;
-    width: 340px;
-    margin-top: 60px;
+    width: auto;
+    margin-top: 120px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-8 .u-text-2 {
+  .u-section-7 .u-btn-1 {
+    margin-top: 64px;
+  }
+
+  .u-section-7 .u-text-2 {
     width: 340px;
   }
 
-  .u-section-8 .u-text-3 {
+  .u-section-7 .u-text-3 {
     width: 340px;
   }
 }
